# ssiaat

./: .gitignore  README.md  async_collector.py  eso_244.ecsv  explore_ngc.py  pyproject.toml  reproj_coiled_hips.py  setup.cfg  ssiaat_improve_plan.md  test_row2.py
.github/workflows/: tests.yml
examples/: example_s3.py  fit_eso_244_demo.py  query_ngc628.py  reproject_single_exposure.py
src/sphx_table_tools/: core.py
src/ssiaat/: __init__.py  async_collector.py  core.py  finder.py  flags.py  fs.py  indexing.py  query.py  reproj.py  reproj_hips.py  reproj_s3_async.py  spherex_table.py  tabular_bandpass_lite.py  wcs_helper.py  zodi_correction.py
src/ssiaat/ZodiScaling70Channels_0329/: ZodiScaling_AllSky_70Ch_Band1.csv  ZodiScaling_AllSky_70Ch_Band2.csv  ZodiScaling_AllSky_70Ch_Band3.csv  ZodiScaling_AllSky_70Ch_Band4.csv  ZodiScaling_AllSky_70Ch_Band5.csv  ZodiScaling_AllSky_70Ch_Band6.csv
src/ssiaat/model/: __init__.py  fitting.py  sed.py  vectorized_lstsq.py
tests/: conftest.py  test_async.py  test_bandpass_lite.py  test_bandpass_tool.py  test_converter.py  test_finder.py  test_imports.py  test_indexing.py  test_lstsq.py  test_model.py  test_reproj.py  test_stable.py  test_wcs_helper.py
tests/data/: lstsq_example.csv
