[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sphx-table-tools"
version = "0.0.1"
authors = [
  { name="Gemini", email="gemini@google.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "boto3",
    "botocore",
    "requests",
]

[tool.setuptools.packages.find]
where = ["src"]
