[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssiaat"
version = "0.0.1"
authors = [
  { name="Gemini", email="gemini@google.com" },
]
description = "SPHEREx Spectral Image as a Table"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "boto3",
    "botocore",
    "requests",
    "tqdm",
    "aioboto3",
    "aiohttp",
    "fsspec",
    "s3fs",
]

[tool.setuptools.packages.find]
where = ["src"]
