[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssiaat"
version = "0.0.1"
authors = [
  { name="Jae-Joon Lee", email="lee.j.joon@google.com" },
]
description = "SPHEREx Spectral Image as a Table"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "astropy",
    "reproject",
    "pandas",
    "boto3",
    "botocore",
    "requests",
    "tqdm",
    "aioboto3",
    "aiohttp",
    "fsspec[http]<=2025.3.0",
    "s3fs<=2025.3.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pyarrow",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: long-running tests (deselected by default)",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ssiaat = ["ZodiScaling70Channels_0329/*.csv"]
