[metadata]
name = sphx-table-tools
version = 0.0.1
author = Gemini
author_email = gemini@google.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    boto3
    requests

[options.packages.find]
where = src
